Fix dark mode colors and add link colors

--- a/src/_normalize.scss
+++ b/src/_normalize.scss
@@ -156,15 +156,16 @@
 
   a {
     text-decoration: none;
-    color: var(--color-accent);
+    color: var(--color-link-default);
 
     &:hover,
     &:focus {
-      color: var(--color-accent-hover);
+      color: var(--color-link-hover);
     }
 
     &:active {
-      color: var(--color-accent-selected);
+      color: var(--color-link-selected);
+      text-decoration: underline;
     }
   }
 
