--- a/src/themes/_color.dark.css
+++ b/src/themes/_color.dark.css
@@ -1,5 +1,4 @@
 :root[theme="dark"] {
-
   /* Content background */
   --color-content-background-primary: #292d30;
   --color-content-background-secondary: #25282a;
@@ -7,7 +6,7 @@
   /* State */
   --color-state-hover: #31373e;
   --color-state-selected: #434343;
-  --color-state-selected-hover: #b3b0ad;
+  --color-state-selected-hover: #4f4f4f;
   --color-state-disabled: #31373e;
 
   /* Accent */
@@ -30,8 +29,8 @@
   /* Foreground */
   --color-foreground-default: #ffffff;
   --color-foreground-complementary: #323130;
-  --color-foreground-inactive: #f2f2f2;
-  --color-foreground-disabled: #a6a6a6;
+  --color-foreground-inactive: #c4c4c4;
+  --color-foreground-disabled: #4f4f4f;
   --color-foreground-secondary: #434343;
   --color-foreground-tertiary: #31373e;
 
@@ -64,6 +63,11 @@
   --color-global-foreground-warning: #323130;
   --color-global-background-error: #fde7e9;
   --color-global-foreground-error: #a50606;
+
+  /* Link */
+  --color-link-default: #60aaff;
+  --color-link-hover: #136bfb;
+  --color-link-selected: #2f7fbd;
 
   /* Data */
   /* 
